k8s/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-native
  namespace: backend-services
spec:
  hosts:
    - "*"
  gateways:
    - spring-native-gateway
  http:
    - match:
        - uri:
            prefix: /api/customers
      route:
        - destination:
            host: spring-native
            port:
              number: 8080
